--- a/css/screen.css
+++ b/css/screen.css
@@ -189,10 +189,13 @@ a:hover { color: #f6a007; text-decoration: none; }
 .subnav > ul > li.subnav__title { font-family: "lato-black"; font-weight: normal; font-style: normal; border-color: #437857; }
 .subnav > ul > li.subnav__title > a { background: #437857; color: white; border: none; padding: 5px 10px 5px 20px; }
 .subnav > ul > li > a { display: block; border: 1px solid transparent; padding: 10px 20px; color: #0a52a2; text-decoration: none; }
-.subnav .subnav__dropdown { opacity: 0; position: absolute; left: -100%; top: 0; bottom: 0; width: 240px; background: white; z-index: 100; border: 2px solid #d0e2d6; padding: 20px 24px 20px 17px; -webkit-transition: all 0.1s linear; -moz-transition: all 0.1s linear; -o-transition: all 0.1s linear; transition: all 0.1s linear; visibility: hidden; }
-.subnav .subnav__dropdown li { margin-bottom: 25px; }
-.subnav .subnav__dropdown li a { font-size: 12px; color: #0a52a2; text-decoration: none; text-transform: none; }
-.subnav .subnav__dropdown li a:hover { color: #ffa200 !important; }
+.subnav .subnav__dropdown { opacity: 0; position: absolute; left: -100%; top: 0; bottom: 1px; width: 240px; background: white; z-index: 100; border: 2px solid #d0e2d6; padding: 20px 24px 20px 17px; -webkit-transition: all 0.1s linear; -moz-transition: all 0.1s linear; -o-transition: all 0.1s linear; transition: all 0.1s linear; visibility: hidden; }
+.subnav .subnav__dropdown-wrap.is-fixed { position: fixed; top: 20px; }
+.subnav .subnav__dropdown-wrap.is-bolno { position: absolute !important; bottom: 20px; top: auto !important; }
+.subnav .subnav__dropdown-wrap li { margin-bottom: 25px; }
+.subnav .subnav__dropdown-wrap li a { font-size: 12px; color: #0a52a2; text-decoration: none; text-transform: none; }
+.subnav .subnav__dropdown-wrap li a:hover { color: #ffa200 !important; }
+.subnav .subnav__border { height: 1px; background: transparent; }
 .subnav .subnav__sale { background: #d84002; margin-top: 30px; border: 2px solid #f0f0f5; font-size: 12px; font-family: "lato-bold"; font-weight: normal; font-style: normal; text-transform: uppercase; color: white; height: 98px; line-height: 98px; text-align: center; }
 .subnav .subnav__sale a { display: block; height: 100%; color: white; text-decoration: none; }
 .subnav .subnav__sale a span { display: inline-block; vertical-align: middle; line-height: 14px; }
